--- a/slides/cod.tex
+++ b/slides/cod.tex
@@ -50,740 +50,11 @@ xcolor={dvipsnames,svgnames,table},10pt]{beamer}
 
 \subsection{Les procédures}
 
-\begin{frame}{Initialisation}
-	Consiste à calculer les distances de chacun des noeuds de façon à obtenir une fonction de distance
-	valide.\vfill
-\end{frame}
-
-\begin{frame}{Initialisation}
-	Consiste à calculer les distances de chacun des noeuds de façon à obtenir une fonction de distance
-	valide.\vfill
-	Procédure d'initialisation : 
-	\begin{algorithmic}[1]
-			\FOR{$i\ \in\ S$}
-				\STATE Calculer la distance $d(i)$ en nombre d'arêtes de $i$ à $t$  
-			\ENDFOR
-			\FOR{$a$ $\in$ $A(s)$}
-				\STATE $x(a)\ \leftarrow$ $c(a)$  
-			\ENDFOR
-			\STATE $d(s)\ \leftarrow |S|$ 
-	\end{algorithmic}
-\end{frame}
-
-\begin{frame}{Examen des noeuds}
-	Consiste à sélectionner un noeud actif et à effectuer un poussage si possible, ou un ré-étiquetage
-	sinon. \vfill
-\end{frame}
-
-\begin{frame}{Examen des noeuds}
-	Consiste à sélectionner un noeud actif et à effectuer un poussage si possible, ou un ré-étiquetage
-	sinon. \vfill
-
-	Procédure Pousser-Réétiqueter :
-	\begin{algorithmic}[1]
-		\IF {$e(i) > 0$}
-		\IF {$\exists j$ tel que $c(i,j) > 0$ \AND $d(i) = d(j) + 1$}
-				\STATE $\delta \leftarrow \min(e(i), c(i,j))$
-				\STATE $f(i,j) \leftarrow f(i,j) + \delta$
-				\STATE $e(i) \leftarrow e(i) - \delta$
-				\STATE $e(j) \leftarrow e(j) + \delta$
-			\ELSE
-				\STATE $d(i) \leftarrow 1 + \min\{ d(j) / (i,j) \in A_f\}$
-			\ENDIF
-		\ENDIF
-	\end{algorithmic}\vfill
-\end{frame}
-
-\begin{frame}{La procédure principale}
-	Consiste à initialiser le problème, et parcourir les noeuds pour l'application du poussage et
-	ré-étiquetage.\vfill
-
-	Algorithme Générique :
-	\begin{algorithmic}[1]
-			\STATE Initialisation() \\
-			\WHILE{Il existe un noeud actif $i$}
-				\STATE Pousser-Réétiqueter(i) 
-			\ENDWHILE
-	\end{algorithmic}\vfill
-\end{frame}
+\input{procedures.tex}
 
 \subsection{Exemple}
 
-\begin{frame}{Sur le graphe de départ}
-	Reprenons notre entreprise $\dots$\vfill
-	\begin{center}
-		\includegraphics[scale=0.32]{img/exemple.png}
-	\end{center}
-\end{frame}
-
-\begin{frame}{Sur le graphe de départ}
-	$\dots$ et associons lui un graphe.\vfill
-	\begin{center}
-		\begin{tikzpicture}
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,  0) {s};
-			\node[noeud] (a) at (   3,  2) {a};
-			\node[noeud] (b) at (   3, -2) {b};
-			\node[noeud] (c) at ( 4.5,  0) {c};
-			\node[noeud] (d) at (   6,  2) {d};
-			\node[noeud] (e) at (   6, -2) {e};
-			\node[noeud] (t) at (   9,  0) {t};
-
-			\draw[fleche] (s) to[out= 45, in=205] node [above  left] {10} (a);
-			\draw[fleche] (a) to[out=235, in= 15] node [below right] {10} (s);
-			\draw[fleche] (s) to                  node [below  left] { 1} (b);
-			\draw[fleche] (a) to                  node [above      ] { 6} (d);
-			\draw[fleche] (a) to[out=285, in=145] node [below  left] { 7} (c);
-			\draw[fleche] (c) to[out=105, in=325] node [above right] { 7} (a);
-			\draw[fleche] (c) to                  node [above  left] { 2} (b);
-			\draw[fleche] (b) to                  node [below      ] { 5} (e);
-			\draw[fleche] (c) to                  node [above right] { 2} (e);
-			\draw[fleche] (d) to[out=255, in=105] node [left       ] { 3} (e);
-			\draw[fleche] (e) to[out= 75, in=285] node [right      ] { 3} (d);
-			\draw[fleche] (d) to                  node [above right] { 2} (t);
-			\draw[fleche] (e) to                  node [below right] { 2} (t);
-		\end{tikzpicture}
-	\end{center}
-\end{frame}
-
-\begin{frame}{Initialisation}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (s) to                  node [above  left] {0} (a);
-			\draw[fleche] (s) to                  node [above right] {0} (b);
-			\draw[fleche] (a) to                  node [left       ] {0} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche] (b) to                  node [right      ] {0} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche] (d) to[out= 15, in=165] node [above      ] {0} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche] (d) to                  node [below  left] {0} (t);
-			\draw[fleche] (e) to                  node [below right] {0} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (s) to                  node [above  left] {10} (a);
-			\draw[fleche] (s) to                  node [above right] { 1} (b);
-			\draw[fleche] (a) to                  node [left       ] { 6} (d);
-			\draw[fleche] (b) to                  node [right      ] { 5} (e);
-			\draw[fleche] (c) to                  node [above right] { 2} (e);
-			\draw[fleche] (d) to                  node [below  left] { 2} (t);
-			\draw[fleche] (e) to                  node [below right] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a &  0 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  0 & 1 \\ \hline
-			e &  0 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-% Poussage depuis s
-\begin{frame}{Initialisation}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche] (a) to                  node [left       ] {0} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche] (b) to                  node [right      ] {0} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche] (d) to[out= 15, in=165] node [above      ] {0} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche] (d) to                  node [below  left] {0} (t);
-			\draw[fleche] (e) to                  node [below right] {0} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (a) to                  node [left       ] { 6} (d);
-			\draw[fleche] (b) to                  node [right      ] { 5} (e);
-			\draw[fleche] (c) to                  node [above right] { 2} (e);
-			\draw[fleche] (d) to                  node [below  left] { 2} (t);
-			\draw[fleche] (e) to                  node [below right] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a & 10 & 2 \\ \hline
-			b &  1 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  0 & 1 \\ \hline
-			e &  0 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 1}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche] (d) to[out= 15, in=165] node [above      ] {0} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche] (d) to                  node [below  left] {0} (t);
-			\draw[fleche] (e) to                  node [below right] {0} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (b) to node [left       ] { 4} (e);
-			\draw[fleche] (c) to                  node [above right] { 2} (e);
-			\draw[fleche] (d) to                  node [below  left] { 2} (t);
-			\draw[fleche] (e) to                  node [below right] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  6 & 1 \\ \hline
-			e &  1 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 1}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche] (d) to[out= 15, in=165] node [above      ] {0} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 1} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (b) to node [left       ] { 4} (e);
-			\draw[fleche] (c) to                  node [above right] { 2} (e);
-			\draw[fleche] (e) to node [above  left] { 1} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  4 & 1 \\ \hline
-			e &  0 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 2}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche] (d) to[out= 15, in=165] node [above      ] {0} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 1} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (b) to node [left       ] { 4} (e);
-			\draw[fleche] (c) to node [above right] { 2} (e);
-			\draw[fleche] (d) to node [above      ] { 3} (e);
-			\draw[fleche] (e) to node [above  left] { 1} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			\textcolor{red}{d} &  \textcolor{red}{4} & \textcolor{red}{2} \\ \hline
-			e &  0 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 2}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche, red] (d) to[out= 15, in=165] node [above      , red] { 3} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 1} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (b) to node [left       ] { 4} (e);
-			\draw[fleche] (c) to node [above right] { 2} (e);
-			\draw[fleche] (e) to node [above  left] { 1} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7 \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  1 & 2 \\ \hline
-			e &  3 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 2}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche, red] (d) to[out= 15, in=165] node [above      , red] { 3} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche] (b) to[out=255, in=105] node [left       ] { 4} (e);
-			\draw[fleche] (c) to                  node [above right] { 2} (e);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7 \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  1 & 2 \\ \hline
-			e &  2 & 1 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 3}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche, red] (d) to[out= 15, in=165] node [above      , red] { 3} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, green] (e) to node [right      , green] { 1} (b);
-			\draw[fleche, green] (e) to node [below      , green] { 6} (d);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  1 & 2 \\ \hline
-			\textcolor{red}{e} &  \textcolor{red}{2} & \textcolor{red}{3} \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 3}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche, red] (d) to[out= 15, in=165] node [above      , red] { 1} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, green] (e) to node [right      , green] { 1} (b);
-			\draw[fleche, green] (e) to node [below      , green] {4} (d);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7 \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			d &  3 & 2 \\ \hline
-			e &  0 & 3 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Phase 4}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] {10} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 6} (d);
-			\draw[fleche] (a) to[out=300, in=170] node [below  left] {0} (c);
-			\draw[fleche] (c) to[out=120, in=345] node [above right] {0} (a);
-			\draw[fleche] (c) to                  node [above  left] {0} (b);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche] (c) to                  node [above right] {0} (e);
-			\draw[fleche, red] (d) to[out= 15, in=165] node [above      , red] { 1} (e);
-			\draw[fleche] (e) to[out=195, in=345] node [below      ] {0} (d);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, green] (d) to                  node [left       , green] { 6} (a);
-			\draw[fleche, green] (e) to node [right      , green] { 1} (b);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7* \\ \hline
-			a &  4 & 2 \\ \hline
-			b &  0 & 2 \\ \hline
-			c &  0 & 2 \\ \hline
-			\textcolor{red}{d} &  \textcolor{red}{3} & \textcolor{red}{3} \\ \hline
-			e &  0 & 3 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Quelques tours d'algorithme plus tard}
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, red] (s) to                  node [above  left, red] { 3} (a);
-			\draw[fleche, red] (s) to                  node [above right, red] { 1} (b);
-			\draw[fleche, red] (a) to                  node [left       , red] { 3} (d);
-			\draw[fleche, red] (b) to                  node [right      , red] { 1} (e);
-			\draw[fleche, red] (d) to                  node [above      , red] { 1} (e);
-			\draw[fleche, red] (d) to                  node [below  left, red] { 2} (t);
-			\draw[fleche, red] (e) to                  node [below right, red] { 2} (t);
-		\end{tikzpicture}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tikzpicture}[scale=0.55]
-			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
-
-			\node[noeud] (s) at (   0,    0) {s};
-			\node[noeud] (a) at (  -2,   -3) {a};
-			\node[noeud] (b) at (   2,   -3) {b};
-			\node[noeud] (c) at (   0, -5.5) {c};
-			\node[noeud] (d) at (  -2,   -8) {d};
-			\node[noeud] (e) at (   2,   -8) {e};
-			\node[noeud] (t) at (   0,  -11) {t};
-
-			\draw[fleche, green] (a) to node [above  left, green] {3} (s);
-			\draw[fleche, green] (b) to                  node [above right, green] { 1} (s);
-		\end{tikzpicture}
-	\end{minipage}\hfill 
-	\begin{minipage}[c]{0.3\linewidth}
-		\begin{tabular}{|c|c|c|}
-			\hline
-			$i$ & $e(i)$ & $d(i)$ \\ \hline
-			s & $\infty$ & 7 \\ \hline
-			a &  0 & 8 \\ \hline
-			b &  0 & 8 \\ \hline
-			c &  0 & 8 \\ \hline
-			d &  0 & 8 \\ \hline
-			e &  0 & 8 \\ \hline
-		\end{tabular}
-	\end{minipage}
-\end{frame}
-
+\input{exemple.tex}
 \subsection{Les algorithmes dérivés}
 
 \begin{frame}{Une question de choix}
