--- a/slides/preflots.tex
+++ b/slides/preflots.tex
@@ -451,7 +451,7 @@
 				\node (d-\name) [below of=e-\name] {$d=\dist$};
 			}
 
-			\draw[fleche, red] (s) -- node[above, red] {$f=  10$} node[below] {$c=10$} (a);
+			\draw[fleche, red] (s) -- node[above, red] {$f=  10$} node[below, black] {$c=10$} (a);
 			\draw[fleche] (a) -- node[above] {$f=  0$} node[below] {$c=12$} (b);
 			\draw[fleche] (b) -- node[above] {$f=  0$} node[below] {$c= 1$} (t);
 			\draw[fleche] (a) to[out=45, in=135]	node[above] {$f=0$} node[below] {$c= 9$} (t);
@@ -476,10 +476,10 @@
 				\node (d-\name) [below of=e-\name] {$d=\dist$};
 			}
 
-			\draw[fleche, red] (s) -- node[above, red] {$f=  10$} node[below] {$c=10$} (a);
+			\draw[fleche, red] (s) -- node[above, red] {$f=  10$} node[below, black] {$c=10$} (a);
 			\draw[fleche] (a) -- node[above] {$f=  0$} node[below] {$c=12$} (b);
 			\draw[fleche] (b) -- node[above] {$f=  0$} node[below] {$c= 1$} (t);
-			\draw[fleche, red] (a) to[out=45, in=135]	node[above, red] {$f=9$} node[below] {$c= 9$} (t);
+			\draw[fleche, red] (a) to[out=45, in=135]	node[above, red] {$f=9$} node[below, black] {$c= 9$} (t);
 
 		\end{tikzpicture}
 	\end{center}
@@ -501,10 +501,10 @@
 				\node (d-\name) [below of=e-\name] {$d=\dist$};
 			}
 
-			\draw[fleche, red] (s) -- node[above, red] {$f=  10$} node[below] {$c=10$} (a);
+			\draw[fleche, red] (s) -- node[above, red] {$f=  10$} node[below, black] {$c=10$} (a);
 			\draw[fleche] (a) -- node[above] {$f=  0$} node[below] {$c=12$} (b);
 			\draw[fleche] (b) -- node[above] {$f=  0$} node[below] {$c= 1$} (t);
-			\draw[fleche, red] (a) to[out=45, in=135]	node[above, red] {$f=9$} node[below] {$c= 9$} (t);
+			\draw[fleche, red] (a) to[out=45, in=135]	node[above, red] {$f=9$} node[below, black] {$c= 9$} (t);
 
 		\end{tikzpicture}
 	\end{center}
